--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Docker Build with GitVersion
 on:
   push:
     branches: [ "main" ]
-    tags: [ 'v*' ]
+    tags: [ '*' ]
   pull_request:
     branches: [ "main" ]
 
@@ -59,3 +59,29 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  create-tag:
+    needs: build
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.9.15
+        with:
+          versionSpec: '5.x'
+
+      - name: Determine version
+        id: gitversion
+        uses: gittools/actions/gitversion/execute@v0.9.15
+
+      - name: Create Git tag
+        run: |
+          git tag "${{ steps.gitversion.outputs.MajorMinorPatch }}"
+          git push origin "${{ steps.gitversion.outputs.MajorMinorPatch }}"
